# python-project-template

./: cookiecutter.json
{{cookiecutter.package_distribution_name}}/: LICENSE  pyproject.toml  setup.cfg
{{cookiecutter.package_distribution_name}}/docs/: conf.py  index.rst
{{cookiecutter.package_distribution_name}}/docs/reference/: modules.rst  {{cookiecutter.package_import_name}}
