[metadata]
name = {{ cookiecutter.package_distribution_name }}
version = 0.0.1
description = {{ cookiecutter.package_description }}

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
# If you are using namespace packages include them using
# include:
#     ns_pkg.mypkg
exclude =
    test*

[tool:pytest]
addopts = --cov
testpaths =
    test

[coverage:run]
branch = True
source = {{ cookiecutter.package_import_name }}

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
fail_under = 75.0
skip_covered = True
show_missing = True

[coverage:paths]
source =
    src/{{ cookiecutter.package_import_name }}/

[flake8]
max-line-length = 120

[tox:tox]
isolated_build = True
envlist = py310,py39

[testimports]
deps =
    pytest

; This is run for each env in envlist when tox is run with no params
[testenv]
commands =
    pytest {posargs}
deps =
    {[testimports]deps}
    pytest-cov

[testenv:typecheck]
deps =
    {[testimports]deps}
    mypy
commands =
    mypy {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}

[testenv:docs]
deps =
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/{{ cookiecutter.package_import_name }}/
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    sphinx
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/{{ cookiecutter.package_import_name }}/
    sphinx-autobuild -n -W -b html docs/ docs/_build/
